--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -966,6 +966,10 @@ footer li:before {
     font-family: 'FontAwesome';
     float: left;
     margin-left: -1.5em;
-    color: #147efb;
+    color: #4adff8;
 }
 
+.footer {
+    background-color: #3273dc;
+    
+}
